# PyGnomeSearchProviderInteracter

./: .buildinfo  README.md  genindex.html  gnome_search_provider_interacter.py  gnomesearchclient.html  gui_test.py  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  gnomesearchclient.doctree  index.doctree  modules.doctree
.github/workflows/: documentation.yml
_sources/: gnomesearchclient.rst.txt
docs/source/: conf.py  index.rst  modules.rst
doctrees/: index.doctree
examples/: gui_test.py
html/: gnomesearchclient.html
src/gnomesearchclient/: __init__.py  __main__.py  client.py  provider.py
